# smart-particles

./: .gitignore  CMakeLists.txt  add-cmake-to-path.ps1  cmake-build.ps1  cmake-generate-solution.ps1  readme.md
Project/SmartParticlesSandbox/: SmartParticlesSandbox.sln  SmartParticlesSandbox.vcxproj  SmartParticlesSandbox.vcxproj.filters  imgui.ini
Project/SmartParticlesSandbox/Sources/glfwbackend/: main.cpp
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
sources/sandbox/: application.cpp  application.h  main.cpp  sandbox.cpp  sandbox.h  scenario-list.cpp  scenario-list.h  scenario.cpp  scenario.h
